# NZIF_Radio

./: .gitignore  README.md  rxmixer.md
.claude/: CLAUDE.md  launch_review_instructions.txt
dap/: #auto_saved_files#  adau1467.kicad_sch  clock_tree.kicad_sch  dap.kicad_prl  dap.kicad_pro  dap.kicad_sch  fp-lib-table  quad_adau1979.kicad_sch  rx_mixers.kicad_sch  sym-lib-table  tx_mixers.kicad_sch
firmware/usb_cdc/: CMakeLists.txt  README.md  main.c  pico_sdk_import.cmake
nzif/: #auto_saved_files#  ADAU1467_5F00_SCH_5F00_SNIPPET.avif  adcs.kicad_sch  audio_clock_fanout.kicad_sch  audio_subsystem.kicad_sch  clock_tree.kicad_sch  coarse_vfo.kicad_sch  crosspoint.kicad_sch  dacs.kicad_sch  dsp.kicad_sch  fp-lib-table  microcontroller.kicad_sch  mixers.kicad_sch  nzif.kicad_pcb  nzif.kicad_pro  nzif.kicad_sch  nzif.kicad_sch.orig  nzif_radio_symbol_library.kicad_sym  nzif_test.kicad_sym  power_ldos.kicad_sch  power_switching_reg.kicad_sch  reconstruction_filters.kicad_sch  rx_driver_amps.kicad_sch  rx_mixer.kicad_sch  sym-lib-table  tx_mixer.kicad_sch  ~nzif.kicad_pro.lck
scripts/: cat_test.ps1  cat_test.sh
sdr_12p/: #auto_saved_files#  adau1467.kicad_sch  adau1962a.kicad_sch  adcs.kicad_sch  clock_tree.kicad_sch  coarse_vfo.kicad_sch  crosspoint.kicad_sch  dacs.kicad_sch  dap.kicad_sch  fp-lib-table  microcontroller.kicad_sch  mixers.kicad_sch  power_ldos.kicad_sch  power_mgmt.kicad_sch  power_switching_reg.kicad_sch  rx_mixers.kicad_sch  sdr_12p.kicad_pro  sdr_12p.kicad_sch  sym-lib-table  triple_adau1978.kicad_sch  triple_adau1979.kicad_sch  tx_mixers.kicad_sch
(+131 files in other folders)
